@@ -1,5 +1,5 @@
 <?php
-// $Id: feeds.test,v 1.12 2010/03/30 20:06:36 diggersf Exp $
+// $Id: feeds.test,v 1.13 2010/03/30 20:16:42 diggersf Exp $
 
 /**
  * @file
@@ -666,7 +666,7 @@ class FeedsSchedulerTestCase extends FeedsWebTestCase {
 
     // There should be feeds_schedule_num (= 10) feeds updated now.
     $schedule = array();
-    $count = db_result(db_query("select COUNT(*) from {feeds_schedule} WHERE last_executed_time <> 0"));
+    $count = db_result(db_query("SELECT COUNT(*) FROM {feeds_schedule} WHERE last_executed_time <> 0"));
     $this->assertEqual($count, 10, '10 feeds refreshed on cron.');
 
     // There should be 100 story nodes in the database.
@@ -679,7 +679,7 @@ class FeedsSchedulerTestCase extends FeedsWebTestCase {
 
     // There should be feeds_schedule_num X 2 (= 20) feeds updated now.
     $schedule = array();
-    $result = db_query("select feed_nid, last_executed_time, scheduled from {feeds_schedule} WHERE last_executed_time <> 0");
+    $result = db_query("SELECT feed_nid, last_executed_time, scheduled FROM {feeds_schedule} WHERE last_executed_time <> 0");
     while ($row = db_fetch_object($result)) {
       $schedule[$row->feed_nid] = $row;
     }
@@ -701,7 +701,7 @@ class FeedsSchedulerTestCase extends FeedsWebTestCase {
     // The import_period setting of the feed configuration is 1800, there
     // shouldn't be any change to the database now.
     $equal = TRUE;
-    $result = db_query("select feed_nid, last_executed_time, scheduled from {feeds_schedule} WHERE last_executed_time <> 0");
+    $result = db_query("SELECT feed_nid, last_executed_time, scheduled FROM {feeds_schedule} WHERE last_executed_time <> 0");
     while ($row = db_fetch_object($result)) {
       $equal = $equal && ($row->last_executed_time == $schedule[$row->feed_nid]->last_executed_time);
     }
@@ -731,7 +731,7 @@ class FeedsSchedulerTestCase extends FeedsWebTestCase {
     // There should not be more nodes than before.
     $equal = FALSE;
     $output = '';
-    $result = db_query("select feed_nid, last_executed_time, scheduled from {feeds_schedule} WHERE last_executed_time <> 0");
+    $result = db_query("SELECT feed_nid, last_executed_time, scheduled FROM {feeds_schedule} WHERE last_executed_time <> 0");
     while ($row = db_fetch_object($result)) {
       $equal = $equal || ($row->last_executed_time == $schedule[$row->feed_nid]->last_executed_time);
     }
